--- a/web/src/styles/index.css
+++ b/web/src/styles/index.css
@@ -11,10 +11,8 @@
     box-shadow: 3px 3px 5px 6px #ccc;
 }
 
-.socialLink {
+a {
     text-decoration: none;
-    font-weight: 600;
-    display: inline-block;
 }
 
 .socialLink:hover {
